# sonar-agent

./: .env.example  .gitignore  README.md  pyproject.toml
docker/: docker-compose.yml
docs/: gitlab_client_hlam.md
python notebooks/: rule_prompt_map.py
sonar-agent/: context.md
sonar-agent/docker/: Dockerfile  run.sh
sonar-agent/src/sonar_agent/: __init__.py  github_client.py  gitlab_client.py  main.py  sonar_client.py
src/sonar_agent/: ai_client.py  code_smell_processor.py  github_client.py  gitlab_client.py  issue_tracker.py  main.py  repo_manager.py  rule_prompt_map.py
src/sonar_agent/ai/: ai_client.py  mistral_client.py  mistral_example.py
src/sonar_agent/git/: gitlab_client.py
src/sonar_agent/sonar/: issue_tracker.py  rule_prompt_map.py  sonar_client.py
tests/: test_ai_client.py
