[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sonar-agent"
version = "0.1.0"
description = "AI-powered SonarQube code smell fixer with cost tracking"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "python-gitlab>=4.0.0",
    "langchain>=0.1.0",
    "langchain-mistralai>=0.1.0",
    "langchain-google-genai>=0.1.0",
    "tiktoken>=0.5.0",
    "langchain-community>=0.3.29",
    "pip-system-certs>=5.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "mypy",
    "pytest-cov",
]

[tool.black]
line-length = 88

[project.scripts]
sonar-agent = "sonar_agent.main:main"
